--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
 body {
-    background-color: azure;
+    background-color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a {
+    color: violet;
 }
 
 .weather-app {
    background-color: azure; 
-   max-width: 600px;
+   max-width: 700px;
    margin: 45px auto;
    box-shadow: 0 30px 50px rgba(65 , 50, 100, 0.08);
    border-radius: 20px;
    padding: 30px;
+}
+
+header {
+    border-bottom: 1px solid white;
+    padding: 0 0 30px 0;
+}
+
+.search-form-input {
+    background-color: white;
+    border: none;
+    border-radius: 6px;
+    width: 80%;
+    font-size: 16px;
+    padding: 15px 20px;
+}
+
+.search-form-button {
+    background-color: violet;
+    padding: 15px 20px;
+    margin-left: 5px;
+    border: none;
+    border-radius: 6px;
+    color: white;
+}
+
+
+main {
+    padding: 30px 0;
+}
+
+.weather-app-city {
+    margin: 0;
+    font-size: 38px;
+    line-height: 48px;
+}
+
+.weather-app-data {
+    display: flex;
+    justify-content: space-between;
+}
+
+.weather-app-details {
+    font-size: 16px;
+    line-height: 24px;
+    color: #27214266;
+    font-weight: 500;
+}
+
+.weather-app-icon {
+    font-size: 44px;
+    margin-top: 22px;
+}
+
+.weather-app-temperature-container {
+    display: flex;
+}
+
+.weather-app-temperature {
+font-size: 40px;
+margin-left: 10px;
+font-weight: bold;
+}
+
+.weather-app-details strong {
+color: purple;
+}
+
+footer{
+    border-top: 1px solid white;
+    padding: 30px 0 0 0;
+    text-align: center;
+    font-size: 13px;
+    color: rgba(0, 0, 0, 0.06);
 }
